Move social links to the header and open them in new tab

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,4 @@
-{% if site.social.github %}<a href="https://github.com/{{ site.social.github }}"><i class="fab fa-github fa-lg"></i></a>{% endif %}
-{% if site.social.instagram %}<a href="https://instagram.com/{{ site.social.instagram }}"><i class="fab fa-instagram fa-lg"></i></a>{% endif %}
-{% if site.social.linkedin %}<a href="https://www.linkedin.com/in/{{ site.social.linkedin }}"><i class="fab fa-linkedin fa-lg"></i></a>{% endif %}
-{% if site.social.twitter %}<a href="https://www.twitter.com/{{ site.social.twitter }}"><i class="fab fa-twitter fa-lg"></i></a>{% endif %}
+{% if site.social.github %}<a href="https://github.com/{{ site.social.github }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg"></i></a>{% endif %}
+{% if site.social.instagram %}<a href="https://instagram.com/{{ site.social.instagram }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-lg"></i></a>{% endif %}
+{% if site.social.linkedin %}<a href="https://www.linkedin.com/in/{{ site.social.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-lg"></i></a>{% endif %}
+{% if site.social.twitter %}<a href="https://www.twitter.com/{{ site.social.twitter }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-lg"></i></a>{% endif %}
