Test cloudflare analytics

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,8 +1,1 @@
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0PZZDZ6JZ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-Z0PZZDZ6JZ');
-    </script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "35cf4420613240739e28f590a6a826b3"}'></script><!-- End Cloudflare Web Analytics -->
