--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,3 +2,4 @@
 {% if site.social.instagram %}<a href="https://instagram.com/{{ site.social.instagram }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-lg"></i></a>{% endif %}
 {% if site.social.linkedin %}<a href="https://www.linkedin.com/in/{{ site.social.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-lg"></i></a>{% endif %}
 {% if site.social.twitter %}<a href="https://www.twitter.com/{{ site.social.twitter }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-lg"></i></a>{% endif %}
+{% if site.social.medium %}<a href="https://www.medium.com/{{ site.social.medium }}" target="_blank" rel="noopener noreferrer"><i class="fab fa-medium fa-lg"></i></a>{% endif %}
