Remove ref to google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://kit.fontawesome.com/7d19255b43.js" crossorigin="anonymous"></script>
-    {% if site.google_analytics %}
+    {% if site.analytics %}
       {% include analytics.html %}
     {% endif %}
 {% seo %}
